Fixed minor navbar bug on small mobile screens

--- a/src/components/MobileNavbar.module.css
+++ b/src/components/MobileNavbar.module.css
@@ -152,3 +152,9 @@
         display: none;
     }
 }
+
+@media (max-width: 400px){
+    .link div:nth-child(1){
+        width: 13%;
+    }
+}
