--- a/src/components/ProfileInfoMobile.module.css
+++ b/src/components/ProfileInfoMobile.module.css
@@ -57,4 +57,12 @@
         justify-content: center;
         width: 100%;
     }
+
+    .followBtn-light{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
 }
