--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -56,7 +56,7 @@
     width: 100%;
     max-width: 15rem;
     height: 100%;
-    max-height: 100vh;
+    min-height: 100vh;
     position: -webkit-sticky;
     position: sticky;
     z-index: 1;
@@ -69,6 +69,14 @@
 
 
 .nav-links{
+    list-style-type: none;
+    margin-top: 40px;
+    padding: 0;
+    width: 230px;
+    margin-left: 10px;
+}
+
+.nav-links-light{
     list-style-type: none;
     margin-top: 40px;
     padding: 0;
@@ -166,13 +174,7 @@
     font-size: 25px;
 }
 
-.nav-links-light{
-    list-style-type: none;
-    margin-top: 40px;
-    padding: 0;
-    width: 230px;
-    margin-left: 10px;
-}
+
 
 .nav-links-light li a {
     display: block;
@@ -269,7 +271,15 @@
         width: 56px;
     }
 
+    .nav-links-light{
+        width: 56px;
+    }
+
     .buttons{
+        width: 56px;
+    }
+
+    .buttons-light{
         width: 56px;
     }
 
@@ -629,6 +639,10 @@
         margin: 0;
     }
 
+    .icons-light{
+        margin: 0;
+    }
+
     .nav-links-light li a {
         padding: inherit;
         align-items: center;
@@ -646,6 +660,9 @@
      display: none;
     }
 
+    .site-title-light{
+        display: none;
+    }
     .buttons{
         font-family: 'Poppins', sans-serif;
         font-size: 16px;
@@ -680,6 +697,10 @@
 
 @media(max-width: 400px){
     .nav-links li{
+        margin:0 4%;
+    }
+
+    .nav-links-light li{
         margin:0 4%;
     }
 }
